# django-dev-platform

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  tailwind.config.js
apps/chat/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/chat/templates/chat/: index.html  messages.html
apps/chat/templates/chat/includes/: message-input.html  message-list.html  message.html  sidebar.html  wrapper-message.html
apps/core/: context_processors.py
apps/core/static/core/css/: base.css  styles.css
apps/core/templates/core/: base.html
apps/core/templates/core/includes/: header.html
apps/main/: urls.py  views.py
apps/main/templates/main/: index.html  login.html
apps/main/templates/main/includes/: login-form.html
components/chat/chat-messages/: chat-messages.css  chat-messages.html  chat_messages.py
components/chat/chat-page/: chat-page.css  chat-page.html  chat_page.py
components/chat/chat-sidebar/: chat-sidebar.css  chat-sidebar.html  chat-sidebar.js  chat_sidebar.py
components/chat/message-input/: message-input.css  message-input.html  message-input.js  message_input.py
components/core/header/: header.css  header.html  header.py
components/core/loader/: loader.css  loader.html  loader.py
components/main/login-form/: login-form.css  login-form.html  login_form.py
conf/: asgi.py  settings.py  urls.py
