[tool.poetry]
name = "django-dev-platform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_dev_platform"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-components = "^0.29"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
django-stubs = "^4.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
